--- a/alu_checkpoint2.qsf
+++ b/alu_checkpoint2.qsf
@@ -56,6 +56,8 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE mux8to1.v
+set_global_assignment -name VERILOG_FILE MUX_2to1.v
 set_global_assignment -name VERILOG_FILE isLessThan_32bit.v
 set_global_assignment -name VERILOG_FILE isNotEqual_32bit.v
 set_global_assignment -name VERILOG_FILE alu.v
